--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
       <artifactId>joda-time</artifactId>
       <version>2.8.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.6</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
