--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ services:
 language: java
 
 jdk:
-  - openjdk6
-  - openjdk7
   - oraclejdk7
   - oraclejdk8
 
@@ -17,21 +15,20 @@ script:
   - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
   - docker stop $dps
 
-#  - docker pull elasticsearch:2.0
-#  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:2.0`
-#  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
-#  - docker stop $dps
-#
-#  - docker pull elasticsearch:1.7
-#  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:1.7`
-#  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
-#  - docker stop $dps
-#
-#  - docker pull elasticsearch:1.6
-#  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:1.6`
-#  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
-#  - docker stop $dps
+  - docker pull elasticsearch:2.0
+  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:2.0`
+  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
+  - docker stop $dps
 
+  - docker pull elasticsearch:1.7
+  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:1.7`
+  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
+  - docker stop $dps
+
+  - docker pull elasticsearch:1.6
+  - dps=`docker run -d -p 127.0.0.1:9200:9200 elasticsearch:1.6`
+  - mvn clean test -DargLine="-DdockerHost=127.0.0.1"
+  - docker stop $dps
 
 cache:
   directories:
